--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,21 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Ranjan Kumar"
-resume_title:                   "Certified Penetration"
+resume_title:                   "Certified Penetration Tester"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "ranjankumar6289@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "555-7334"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
+# resume_contact_telephone:       "555-7334"
+resume_contact_address:         "BIHAR, IN"
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • ranjankumar6289@gmail.com"
-display_header_contact_info:    "false"
+resume_header_contact_info:     "BIHAR, IN • ranjankumar6289@gmail.com"
+display_header_contact_info:    "true"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>Experienced Red Teamer with 2 years of experience in web application and network penetration testing. Strong
+understanding of vulnerabilities and mitigation strategies through multiple certifications, Specifically focusing on cloud
+security. As a cybersecurity researcher, my goal is to stay current on cybersecurity trends and to learn continuously.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -37,10 +39,10 @@ resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
 resume_section_skills:          true
-resume_section_recognition:     true
-resume_section_links:           true
-resume_section_associations:    true
-# resume_section_interests:       true
+#resume_section_recognition:     true
+#resume_section_links:           true
+#resume_section_associations:    true
+resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
