--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ resume_contact_email:           "ranjankumar6289@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 # resume_contact_telephone:       "555-7334"
-resume_contact_address:         "BIHAR, IN"
+#resume_contact_address:         "BIHAR, IN"
 
-resume_header_contact_info:     "BIHAR, IN • ranjankumar6289@gmail.com"
+#resume_header_contact_info:     "BIHAR, IN • ranjankumar6289@gmail.com"
 display_header_contact_info:    "true"
 
 resume_header_intro: "<p>Experienced Red Teamer with 2 years of experience in web application and network penetration testing. Strong
@@ -49,6 +49,7 @@ resume_section_interests:       true
 resume_social_links:
   resume_github_url:            "https://github.com/kabir0104k"
   resume_twitter_url:           "https://twitter.com/hunt6289"
+  resume_reddit_url:            "https://www.reddit.com/user/AlexMarkJohn"
  # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/ranjankumar6289/"
