--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ resume_social_links:
   resume_github_url:            "https://github.com/kabir0104k"
   resume_twitter_url:           "https://twitter.com/hunt6289"
   resume_reddit_url:            "https://www.reddit.com/user/AlexMarkJohn"
+  resume_facebook_url:          "https://www.facebook.com/profile.php?id=100054522536770"
  # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/ranjankumar6289/"
