--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,21 @@
 # Jobs
 # VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+<ul class="resume-item-list"><li>Completed A 6-Month Remote Internship At Mossé Cyber Security Institute</li><li>Certified Penetration Tester Skilled In Real-World VAPT For Diverse Systems</li><li>Pentested 7 Client Networks, Discovering 3 Vulnerabilities And Offering Effective Security Solutions</li></ul>Created A Detailed Proof Of Concept And Conducted Full Vulnerability Research, Providing Practical Safety Tips</li></ul>Conducted Blackbox Penetration Testing, Successfully Identifying Vulnerabilities And Delivering Security Solutions</li></ul>Proficient In Analyzing Systems, Including Hard Drives, Ram, Usb Cards, And Digital Media</li></ul>Familiar With A Wide Range Of Enterprise-Level Penetration Testing Tools, Both Open-source And Commercial</li>
+
+#- company: Springfield International Human Rights Outreach
+  position: Independent Security Researcher 
+  duration: May, 2022 &mdash; Present 
+ #summary
 
 # Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+- #company: United Nations Human Rights Council
+  #position: Director of Digital Strategy
+  #duration:  Jun, 2010 &mdash; Sept, 2013
+  #summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
 
 
 # Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+- #company: Springfield Women & Children's Center
+  #position: Communications Coordinator
+  #duration:   Jun, 2008  &mdash; May, 2010
+  #summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
