--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,11 +1,14 @@
 # Jobs
 # VP of Global Communications
-<ul class="resume-item-list"><li>Completed A 6-Month Remote Internship At Mossé Cyber Security Institute</li>
-<li>Certified Penetration Tester Skilled In Real-World VAPT For Diverse Systems</li>
-<li>Pentested 7 Client Networks, Discovering 3 Vulnerabilities And Offering Effective Security Solutions</li>
-</li>Created A Detailed Proof Of Concept And Conducted Full Vulnerability Research, Providing Practical Safety Tips</li>
-</li>Conducted Blackbox Penetration Testing, Successfully Identifying Vulnerabilities And Delivering Security Solutions</li>
-</li>Proficient In Analyzing Systems, Including Hard Drives, Ram, Usb Cards, And Digital Media</li></ul>Familiar With A Wide Range Of Enterprise-Level Penetration Testing Tools, Both Open-source And Commercial</li></ul
+resume-item-list:
+  - Completed A 6-Month Remote Internship At Mossé Cyber Security Institute
+  - Certified Penetration Tester Skilled In Real-World VAPT For Diverse Systems
+  - Pentested 7 Client Networks, Discovering 3 Vulnerabilities And Offering Effective Security Solutions
+  - Created A Detailed Proof Of Concept And Conducted Full Vulnerability Research, Providing Practical Safety Tips
+  - Conducted Blackbox Penetration Testing, Successfully Identifying Vulnerabilities And Delivering Security Solutions
+  - Proficient In Analyzing Systems, Including Hard Drives, Ram, USB Cards, And Digital Media
+  - Familiar With A Wide Range Of Enterprise-Level Penetration Testing Tools, Both Open-source And Commercial
+
 
 #- company: Springfield International Human Rights Outreach
   position: Independent Security Researcher 
