--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,13 +1,13 @@
 # Jobs
 # VP of Global Communications
 resume-item-list:
-  - Completed A 6-Month Remote Internship At Mossé Cyber Security Institute
-  - Certified Penetration Tester Skilled In Real-World VAPT For Diverse Systems
-  - Pentested 7 Client Networks, Discovering 3 Vulnerabilities And Offering Effective Security Solutions
-  - Created A Detailed Proof Of Concept And Conducted Full Vulnerability Research, Providing Practical Safety Tips
-  - Conducted Blackbox Penetration Testing, Successfully Identifying Vulnerabilities And Delivering Security Solutions
-  - Proficient In Analyzing Systems, Including Hard Drives, Ram, USB Cards, And Digital Media
-  - Familiar With A Wide Range Of Enterprise-Level Penetration Testing Tools, Both Open-source And Commercial
+  &mdash; Completed A 6-Month Remote Internship At Mossé Cyber Security Institute
+  &mdash; Certified Penetration Tester Skilled In Real-World VAPT For Diverse Systems
+  &mdash; Pentested 7 Client Networks, Discovering 3 Vulnerabilities And Offering Effective Security Solutions
+  &mdash; Created A Detailed Proof Of Concept And Conducted Full Vulnerability Research, Providing Practical Safety Tips
+  &mdash; Conducted Blackbox Penetration Testing, Successfully Identifying Vulnerabilities And Delivering Security Solutions
+  &mdash; Proficient In Analyzing Systems, Including Hard Drives, Ram, USB Cards, And Digital Media
+  &mdash; Familiar With A Wide Range Of Enterprise-Level Penetration Testing Tools, Both Open-source And Commercial
 
 
 #- company: Springfield International Human Rights Outreach
