--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Ranjan Kumar"
+resume_name:                    "𝐑𝐚𝐧𝐣𝐚𝐧 𝐊𝐮𝐦𝐚𝐫"
 resume_title:                   "Certified Penetration Tester"
 
 # used for the contact button in _layouts/resume.html
