--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,8 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: CTF Challenges
+- description: Bug Bounty Hunting 
+- description: Course Enrolling
+- description: Collecting Certificates 
+- description: Aiming To Earn All Cloud And
+OffSec Certifications With The Goal To Improve My Knowledge Of Cybersecurity And Cloud Technologies
+- 
