--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -3,6 +3,4 @@
 - description: Bug Bounty Hunting 
 - description: Course Enrolling
 - description: Collecting Certificates 
-- description: Aiming To Earn All Cloud And
-OffSec Certifications With The Goal To Improve My Knowledge Of Cybersecurity And Cloud Technologies
-- 
+- description: Aiming To Earn All Cloud And OffSec Certifications With The Goal To Improve My Knowledge Of Cybersecurity And Cloud Technologies
