--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,13 +6,13 @@
   #role: Founder & Primary Developer
   #duration: 2012 &mdash; Present
   # url: "#"
-  - description: Designed A Secure VPN Network That Supports 50 Remote Encrypted Connections.
-  - description: Created Github Repo For Beginner CMD, PowerShell, Nmap, Cybersecurity, And CEH Resources.
-  - description: Developed Secure, User-Friendly Private Cloud As A Cost-Effective Alternative To Public Clouds.
-  - description: 3-Month Project-Based Internship With Cyber Secured India, Taking Part In Real-World Projects.
-  - description: Built A Multi-Domain Active Directory Lab For Extensive Attack Simulations.
-  - description: Developed An Advanced Browser-Based Hacking Lab For Hands-on Penetration Testing.
-  - description: Experience With Nmap And Bash Scripting To Automate The Fingerprinting Phases Of VAPT.
+  description: Designed A Secure VPN Network That Supports 50 Remote Encrypted Connections.
+  description: Created Github Repo For Beginner CMD, PowerShell, Nmap, Cybersecurity, And CEH Resources.
+  description: Developed Secure, User-Friendly Private Cloud As A Cost-Effective Alternative To Public Clouds.
+  description: 3-Month Project-Based Internship With Cyber Secured India, Taking Part In Real-World Projects.
+  description: Built A Multi-Domain Active Directory Lab For Extensive Attack Simulations.
+  description: Developed An Advanced Browser-Based Hacking Lab For Hands-on Penetration Testing.
+  -description: Experience With Nmap And Bash Scripting To Automate The Fingerprinting Phases Of VAPT.
 
 
 # Springfield Community Outreach Group
